# entro-core

./: .gitignore  AUTHORS.md  CITATION.cff  COMPLETION.md  FINAL_REPORT.md  Makefile  README.md  pyproject.toml  upload_pypi.py
entro_core/: __init__.py  actuator.py  control_law.py  controller.py  controller_v2.py  hybrid_controller.py  normalize.py  state.py
notebooks/: 00_README.md  02_hybrid_controller_test.ipynb  03_noise_sensitivity.ipynb
paper/: ENTRO-CORE_Research_Paper.docx  ENTRO-CORE_Research_Paper.md
paper/arxiv/: entro_core_paper.tex  entro_core_paper_revised.tex
simulation/: critical_scenario.py  generate_figures.py  generate_figures_fixed.py  hybrid_test.py  plot_results.py  simple_test.py  system_dynamics.py  system_dynamics_fixed.py  validation_experiment.py  validation_v2.py
simulation/results/: comparison.csv  trajectories.csv  trajectories_comparison.csv  trajectories_fixed.csv
tests/: test_controller.py
